
@startuml SLAL#17.class

skinparam monochrome true

package Domain {

    class HorusAction <<Entity>> {
        LocalizableString name
    }

    class AllActions <<Aggregate>> {
    }

    class GetAllActions <<Interactor>> {
        + AllActions actions
        + void perform()
    }

    interface AllActionsRepository <<Repository>> {
        + AllActions getAll()
    }

    AllActionsRepository .u.> AllActions
    GetAllActions .u.> AllActions
    GetAllActions -r-> AllActionsRepository
    AllActions o-u-> "*" HorusAction

}

package Infrastructure {

    class AllAppsRepository {
        + AllActions getAll()
    }

    class App <<Adapter>> {
    }

    class AllApps {
    }

    AllApps o-u-> "*" App

}

package Android_SDK {

    class Intent {
    }

}

AllApps -u-|> AllActions
AllAppsRepository .u.|> AllActionsRepository
AllAppsRepository .u.> AllApps
App -u-|> HorusAction
App -d-> "1" Intent

hide empty members

@enduml
